--- a/src/Desktop/Views/Components/TableView.xaml
+++ b/src/Desktop/Views/Components/TableView.xaml
@@ -1,12 +1,49 @@
-﻿<UserControl x:Class="Desktop.Views.Components.TableView"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:Desktop.Views.Components"
-             mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
+﻿<UserControl
+    x:Class="Desktop.Views.Components.TableView"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:local="clr-namespace:Desktop.Views.Components"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    mc:Ignorable="d"
+    d:DesignHeight="450"
+    d:DesignWidth="800">
     <Grid>
-        <TextBlock Text="List"></TextBlock>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="Auto" />
+            <ColumnDefinition />
+        </Grid.ColumnDefinitions>
+        <Grid>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="65" />
+                <RowDefinition />
+            </Grid.RowDefinitions>
+            <TextBlock
+                Margin="20 0"
+                VerticalAlignment="Center"
+                FontSize="24"
+                Text="List" />
+            <ScrollViewer Grid.Row="2" VerticalScrollBarVisibility="Hidden">
+                <ItemsControl ItemsSource="{Binding MenuCollection}" ScrollViewer.VerticalScrollBarVisibility="Auto">
+                    <ItemsControl.ItemTemplate>
+                        <DataTemplate DataType="ListViewItem">
+                            <Button
+                                Style="{DynamicResource MaterialDesignFlatButton}"
+                                Width="280"
+                                Height="40"
+                                HorizontalContentAlignment="Left"
+                                VerticalAlignment="Center"
+                                Content="{Binding Name}"
+                                Command="{Binding NavigateCommand}"
+                                Padding="20 0" />
+                        </DataTemplate>
+                    </ItemsControl.ItemTemplate>
+                </ItemsControl>
+            </ScrollViewer>
+        </Grid>
+        <DataGrid
+            Grid.Column="1"
+            AutoGenerateColumns="True"
+            ItemsSource="{Binding ItemCollection}" />
     </Grid>
 </UserControl>
