--- a/src/Desktop/Views/MainView.xaml
+++ b/src/Desktop/Views/MainView.xaml
@@ -13,47 +13,16 @@
     Style="{DynamicResource MaterialDesignWindow}"
     Title="{Binding Title}">
     <materialDesign:DialogHost DialogTheme="Inherit">
-        <materialDesign:DialogHost.DialogContent>
-            <StackPanel Margin="16">
-                <TextBlock Text="Add a new fruit." />
-                <TextBox
-                    x:Name="FruitTextBox"
-                    Margin="0,8,0,0"
-                    HorizontalAlignment="Stretch" />
-                <StackPanel HorizontalAlignment="Right" Orientation="Horizontal">
-                    <Button
-                        Margin="0,8,8,0"
-                        Command="{x:Static materialDesign:DialogHost.CloseDialogCommand}"
-                        Content="ACCEPT"
-                        IsDefault="True"
-                        Style="{StaticResource MaterialDesignFlatButton}">
-                        <Button.CommandParameter>
-                            <system:Boolean>True</system:Boolean>
-                        </Button.CommandParameter>
-                    </Button>
-
-                    <Button
-                        Margin="0,8,8,0"
-                        Command="{x:Static materialDesign:DialogHost.CloseDialogCommand}"
-                        Content="CANCEL"
-                        IsCancel="True"
-                        Style="{StaticResource MaterialDesignFlatButton}">
-                        <Button.CommandParameter>
-                            <system:Boolean>False</system:Boolean>
-                        </Button.CommandParameter>
-                    </Button>
-                </StackPanel>
-            </StackPanel>
-        </materialDesign:DialogHost.DialogContent>
         <Grid>
             <Grid.ColumnDefinitions>
-                <ColumnDefinition />
+                <ColumnDefinition Width="Auto" />
                 <ColumnDefinition />
             </Grid.ColumnDefinitions>
-            <Button
-                Width="200"
-                Command="{Binding ShowMessageCommand}"
-                Content="Click me" />
+            <StackPanel>
+                <TextBlock Height="45"></TextBlock>
+                <Button Height="50" Width="50" Command="{Binding StartServiceCommand}" Style="{DynamicResource MaterialDesignFlatButton}" Content="Start" />
+                <Button Height="50" Width="50" Command="{Binding StopServiceCommand}" Style="{DynamicResource MaterialDesignFlatButton}" Content="Stop" />
+            </StackPanel>
             <ContentControl Grid.Column="1" Content="{Binding ActiveView}" />
         </Grid>
     </materialDesign:DialogHost>
