--- a/src/Desktop/Views/Components/TableView.xaml
+++ b/src/Desktop/Views/Components/TableView.xaml
@@ -2,6 +2,7 @@
     x:Class="Desktop.Views.Components.TableView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:converters="clr-namespace:Desktop.Converters"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:local="clr-namespace:Desktop.Views.Components"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -9,36 +10,56 @@
     d:DesignHeight="450"
     d:DesignWidth="800">
     <Grid>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="220" />
-            <ColumnDefinition />
-        </Grid.ColumnDefinitions>
-        <Grid>
-            <Grid.RowDefinitions>
-                <RowDefinition Height="Auto" />
-                <RowDefinition />
-            </Grid.RowDefinitions>
-            
-            <ScrollViewer Margin="0 0 10 0" Grid.Row="2" VerticalScrollBarVisibility="Hidden">
-                <ItemsControl ItemsSource="{Binding MenuCollection}" ScrollViewer.VerticalScrollBarVisibility="Auto">
-                    <ItemsControl.ItemTemplate>
-                        <DataTemplate DataType="ListViewItem">
-                            <Button
-                                Style="{DynamicResource MaterialDesignFlatButton}"
-                                Width="Auto"
-                                HorizontalContentAlignment="Left"
-                                VerticalAlignment="Center"
-                                Content="{Binding Name}"
-                                Command="{Binding NavigateCommand}"/>
-                        </DataTemplate>
-                    </ItemsControl.ItemTemplate>
-                </ItemsControl>
-            </ScrollViewer>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="*" />
+        </Grid.RowDefinitions>
+
+        <!-- Title or Header of Content (Optional) -->
+        <TextBlock
+            Grid.Row="0"
+            Margin="15 20"
+            FontSize="16"
+            Foreground="White"
+            Text="My Plans" />
+        
+        <Grid Grid.Row="1">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="220" />
+                <ColumnDefinition />
+            </Grid.ColumnDefinitions>
+
+            <Grid>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition />
+                </Grid.RowDefinitions>
+                <!--<ProgressBar IsIndeterminate="True" Visibility="{Binding IsLoading, Converter={x:Static converters:BoolToVisibilityConverter.VisibleOrCollapsed}}" />-->
+                <ScrollViewer
+                    Grid.Row="2"
+                    Margin="0 0 10 0"
+                    VerticalScrollBarVisibility="Hidden">
+                    <ItemsControl ItemsSource="{Binding MenuCollection}" ScrollViewer.VerticalScrollBarVisibility="Auto">
+                        <ItemsControl.ItemTemplate>
+                            <DataTemplate DataType="ListViewItem">
+                                <Button
+                                    Width="Auto"
+                                    VerticalAlignment="Center"
+                                    HorizontalContentAlignment="Left"
+                                    Command="{Binding NavigateCommand}"
+                                    Content="{Binding Name}"
+                                    Style="{DynamicResource MaterialDesignFlatButton}" />
+                            </DataTemplate>
+                        </ItemsControl.ItemTemplate>
+                    </ItemsControl>
+                </ScrollViewer>
+            </Grid>
+
+            <DataGrid
+                Grid.Column="1"
+                AutoGenerateColumns="True"
+                HorizontalScrollBarVisibility="Auto"
+                ItemsSource="{Binding ItemCollection}" />
         </Grid>
-        <DataGrid
-            Grid.Column="1"
-            AutoGenerateColumns="True"
-            HorizontalScrollBarVisibility="Auto"
-            ItemsSource="{Binding ItemCollection}" />
     </Grid>
 </UserControl>
