--- a/src/Desktop/Views/MainView.xaml
+++ b/src/Desktop/Views/MainView.xaml
@@ -19,18 +19,30 @@
             </Grid.ColumnDefinitions>
 
             <!-- Sidebar with Buttons -->
-            <StackPanel
+            <Grid
                 Grid.Column="0"
+                Margin="0 0 2 0"
                 VerticalAlignment="Stretch"
                 Background="#1E1E1E">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="*" />
+                    <RowDefinition Height="Auto" />
+                </Grid.RowDefinitions>
+                <Grid.Effect>
+                    <DropShadowEffect Color="Black" ShadowDepth="0.1"/>
+                </Grid.Effect>
                 <!-- Top Section (like the Teams logo or Activity icon) -->
                 <StackPanel
+                    Grid.Row="0"
                     HorizontalAlignment="Center"
                     VerticalAlignment="Center"
                     Background="#252526" />
 
                 <!-- Navigation Buttons -->
                 <StackPanel
+                    Grid.Row="1"
+                    Height="Auto"
                     Margin="5 10"
                     HorizontalAlignment="Center"
                     VerticalAlignment="Top">
@@ -80,12 +92,27 @@
                     </Button>
                     <!-- Add more buttons as needed -->
                 </StackPanel>
-            </StackPanel>
+                <StackPanel
+                    Grid.Row="2"
+                    Margin="5"
+                    HorizontalAlignment="Center"
+                    VerticalAlignment="Top">
+                    <Button
+                        Width="40"
+                        Height="40"
+                        Padding="0"
+                        Style="{DynamicResource MaterialDesignFlatButton}"
+                        ToolTip="Planner">
+                        <materialDesign:PackIcon
+                            Width="20"
+                            Height="20"
+                            Kind="Settings" />
+                    </Button>
+                </StackPanel>
+            </Grid>
 
             <!-- Main Content Area -->
             <Grid Grid.Column="1" Background="#1E1E1E">
-                
-
                 <!-- Content Area with dynamic binding -->
                 <ContentControl
                     Grid.Row="1"
